# database-internals

./: CMakeLists.txt  Makefile  README.md  a.out  archived_CMakeLists.txt  chapter-1-roadmap.md  column_store.cpp  demo.db  demo_records.db  error.out  index_organized_table.cpp  main.cpp  plan.md  scratch.txt  tmp.txt  value.h
ch1/: .chapter-1-notes.md.swp  a.out  boost_pfr_examples.cpp  chapter-1-notes.md  chapter-1-roadmap.md  compile_error_context.sh  error.out  index_organized_table.cpp  row_store.cpp  variant_examples.cpp
common/: README.md  column.h  config.h  exception.h  macros.h  string_util.cpp  string_util.h  types.h
index/: archive.txt  b_plus_tree.cpp  b_plus_tree.h  disk_manager_consideration.md  plan.md  type_system_consideration.md
storage/: DiskManager.cpp  DiskManager.h  disk_manager.cpp  disk_manager.h  disk_manager2.h  freelist_page.cpp  freelist_page.h  manifest.md  page.cpp  page.h  prompt.txt  slotted_page.cpp  slotted_page.h
tests/: ARCHIVED_disk_manager.cpp  disk_manager.cpp  page.cpp  slotted_page.cpp  storage_test.cpp  storage_viz.cpp
type/: README.md  boolean_type.h  column.h  float_type.h  numeric_type.h  schema.cpp  schema.h  type.cpp  type.h  type_util.h  value.cpp  value.h  varchar_type.h
type2/: integer_parent_type.h  type.cpp  type.h  value.h
